--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,6 +39,8 @@
     <main class="main-container">
         {{{body}}}
     </main>
+    <footer>
+    </footer>
 
     {{#if logged_in}}
     <script src="/js/logout.js"></script>
